# DZ_10

./: hw10_2.ipynb  pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py
hw_project/quotes/: forms.py  models.py  urls.py  views.py
hw_project/quotes/templates/quotes/: add_quote.html  index.html
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  signup.html
